--- a/scss/pages/_study-page.scss
+++ b/scss/pages/_study-page.scss
@@ -168,14 +168,23 @@
                       margin-left:0px;
                       padding-left: 0px;
                       li{
-                        font-family: sans-serif;
-                        font-size: 1rem;
-                        padding:0.7em;
-                        cursor:pointer;
-                        &:hover{
-                          background-color:rgb(237, 248, 240);
-                          color:rgb(72, 35, 95);
-                        }
+                          button{
+                              font-family: sans-serif;
+                              font-size: 1rem;
+                              padding:0.7em;
+                              cursor:pointer;
+                              text-decoration: none;
+                              width: 100%;
+                              height: 100%;
+                              background-color: rgba(0,0,0,0);
+                              outline:none;
+                              border:0px;
+                              text-align: left;
+                              &:hover{
+                                background-color:rgb(237, 248, 240);
+                                color:rgb(72, 35, 95);
+                              }
+                          }
                       }
                     }
                   }
